fix(community): sonarqube 이슈 사항 반영